--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,7 +2,16 @@
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3">
       <%= form_for @post do |f| %>
-      <h1><%= form_title %></h1>
+        <h1><%= form_title %></h1>
+        <% if @post.errors.any? %>
+          <div class="alert alert-danger">
+            <ul>
+            <% @post.errors.full_messages.each do |msg| %>
+              <li><%= msg %></li>
+            <% end %>
+            </ul>
+          </div>
+        <% end %>
         <div class="form-group">
           <%= f.text_field :title, class: "form-control input-lg", placeholder: "Ingresa el título de la publicación"%>
         </div>
