--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,10 @@
 <div class="container">
   <div class="row">
-    <h1><%=@post.title%></h2>
-    <h3><%=@post.title%></h3>
-    <p><%=@post.description%></p>
+    <div class="col-sm-8 col-sm-offset-2">
+      <%=link_to "Volver", root_path %>
+      <h2><%=@post.title%></h2>
+      <h4>Publicado por <%=@post.user.email%></h4>
+      <p><%=@post.description%></p>
+    </div>
   </div>
 </div>
