--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,43 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-8 col-sm-offset-2">
-      <%=link_to "Volver", root_path %>
-      <h2><%=@post.title%></h2>
-      <h4>Publicado por <%=@post.user.email%></h4>
-      <p><%=@post.description%></p>
+      <div class="post">
+        <%=link_to "Volver", root_path %>
+        <h2><%=@post.title%></h2>
+        <h4>Publicado por <%=@post.user.email%></h4>
+        <p><%=@post.description%></p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-8 col-sm-offset-2">
+      <div class="votos">
+
+      </div>
+      <div class="comments">
+        <%@post.comments.each do |comment| %>
+          <div class="panel panel-default">
+            <div class="panel-heading"><%=comment.user.email%></div>
+            <div class="panel-body"><%=comment.body%></div>
+          </div>
+        <% end %>
+
+        <% if signed_in? %>
+          <h5>Nuevo comentario</h5>
+          <%= form_for [@post, @post.comments.build] do |f| %>
+            <div class="form-group">
+              <%= f.text_area :body, class: "form-control", placeholder: "Agregar comentario" %>
+            </div>
+
+            <div class="actions text-right">
+              <%= f.submit "Comentar", class: "btn btn-primary" %>
+            </div>
+          <% end %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
