--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,11 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-    <p class="notice"><%= notice %></p>
+    <div class="notice alert alert-info alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert"  aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <p class="notice"><%= notice %></p>
+    </div>
+    <!-- <p class="notice"><%= notice %></p> -->
     <p class="alert"><%= alert %></p>
     <%= yield %>
   </body>
