--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
         <%=link_to "Volver", root_path %>
         <h2><%=@post.title%></h2>
         <h4>Publicado por <%=@post.user.email%></h4>
-        <p><%=@post.description%></p>
+        <p><%=markdown(@post.description)%></p>
       </div>
     </div>
   </div>
