--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,12 +29,21 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
+
+  <%if notice %>
     <div class="notice alert alert-info alert-dismissible" role="alert">
       <button type="button" class="close" data-dismiss="alert"  aria-label="Close"><span aria-hidden="true">&times;</span></button>
       <p class="notice"><%= notice %></p>
     </div>
+  <% end %>
+
+  <%if alert %>
+    <div class="notice alert alert-info alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert"  aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <p class="alert"><%= alert %></p>
+    </div>
+  <% end %>
     <!-- <p class="notice"><%= notice %></p> -->
-    <p class="alert"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
