--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-3">
+        <%=link_to "<span class='glyphicon glyphicon-arrow-left'></span>Atras".html_safe, root_path%>
       <%= form_for @post do |f| %>
         <h1><%= form_title %></h1>
         <% if @post.errors.any? %>
