--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-8 col-sm-offset-2">
       <div class="post">
-        <%=link_to "Volver", root_path %>
+        <%=link_to "<span class='glyphicon glyphicon-arrow-left'></span>Atras".html_safe, root_path%>
         <h2><%=@post.title%></h2>
         <h4>Publicado por <%=@post.user.email%></h4>
         <p><%=markdown(@post.description)%></p>
