--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,24 @@
  @import "bootstrap-sprockets";
  @import "bootstrap";
  @import "posts";
+
+body{
+  #title{
+    font-family: 'Lobster', cursive;
+    font-size: 30pt;
+  }
+
+  p{
+    font-size: 15px;
+  }
+
+  .published_ago{
+    color: rgb(156, 152, 152);
+  }
+
+  a:hover{
+    text-decoration: none;
+    color: rgb(213, 102, 102);
+  }
+
+}
